syntax = "proto3";

package gateway;

option go_package = "./.";

import "google/api/annotations.proto";

message StringRequest {
    string value = 1;
}

message StringResponse {
    string value = 1;
}

service GateWay {
    rpc Echo(StringRequest) returns (StringResponse) {
        option (google.api.http) = {
            post: "/echo"
            body: "*"
        };
    }
}

